--- a/CardGame/CardGame.vcxproj.filters
+++ b/CardGame/CardGame.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="menu.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="rules.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="menu.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="rules.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
   </ItemGroup>
